# Flight-Logbook

./: .gitignore  README.md  agents.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260417_0001_initial_canonical_schema.py  20260420_0002_add_processed_telemetry_status.py
apps/api/src/myflightbook_api/: main.py
apps/api/src/myflightbook_api/api/dependencies/: auth.py
apps/api/src/myflightbook_api/api/routes/: aircraft.py  (+7 more)
apps/api/src/myflightbook_api/core/: auth.py  config.py  logging.py  oidc.py
apps/api/src/myflightbook_api/db/: dependencies.py  session.py  urls.py
apps/api/src/myflightbook_api/jobs/: __init__.py  import_legacy_core.py  seed_demo.py
apps/api/src/myflightbook_api/models/: __init__.py  aircraft.py  airport.py  category_class.py  country_code.py  deadline.py  flight.py  legacy.py  make_model.py  media.py  mixins.py  user.py
apps/api/src/myflightbook_api/schemas/: aircraft.py  auth.py  flight.py  image.py  profile.py  telemetry.py  totals.py
apps/api/src/myflightbook_api/services/: totals.py
apps/api/tests/: test_airport_query.py  test_airports_importer.py  test_auth.py  test_category_class.py  test_country_code.py  test_currency_tracker.py  test_db_urls.py  test_faa_8710.py  test_flights_routes.py  test_geography.py  test_geography_solar.py  test_health.py  test_image_processing.py  test_import_foreflight.py  test_import_generic_csv.py  test_import_logten.py  test_legacy_import_helpers.py  test_legacy_mobile_compat.py  test_logging.py  test_media_storage.py  test_model_contracts.py  test_pdf_generator.py  test_service_user_aircraft.py  test_telemetry_airbly.py  test_telemetry_baju.py  test_telemetry_csv.py  test_telemetry_gpx.py  test_telemetry_igc.py  test_telemetry_kml.py  test_telemetry_nmea.py  test_telemetry_registry.py  test_totals.py  test_totals_calculator.py  test_weather_adds.py
apps/api/tests/fixtures/: README.md
apps/worker/: .env.example  Dockerfile  README.md  pyproject.toml
apps/worker/src/myflightbook_worker/: image_tasks.py  main.py  storage.py
apps/worker/tests/: test_image_tasks.py
(+239 files in other folders)
