[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myflightbook-api"
version = "0.1.0"
description = "FastAPI backend for the MyFlightbook migration platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aioboto3>=13.0.0",
  "alembic>=1.16.5",
  "asyncpg>=0.30.0",
  "fastapi>=0.116.1",
  "geoalchemy2>=0.18.0",
  "gunicorn>=23.0.0",
  "httpx>=0.28.1",
  "pyjwt[crypto]>=2.12.1",
  "pydantic-settings>=2.10.1",
  "psycopg[binary]>=3.2.10",
  "pymysql>=1.1.1",
  "redis>=6.4.0",
  "sentry-sdk>=2.39.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.43",
  "uvicorn>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
