[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myflightbook-worker"
version = "0.1.0"
description = "Background worker scaffold for MyFlightbook telemetry and media jobs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aioboto3>=15.5.0",
  "arq>=0.28.0",
  "asyncpg>=0.30.0",
  "Pillow>=11.2.1",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.43",
]

[project.scripts]
myflightbook-worker = "myflightbook_worker.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
